# doujin-game-demo

./: CMakeLists.txt
resource/: sample.json
resource/script/: drama.lua
src/: CMakeLists.txt
src/cli-args/: CMakeLists.txt  cli.cpp  cli.h
src/entry/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/layer-avg/: CMakeLists.txt  avglayer.cpp  avglayer.h  avglayer.ui  avglayer_global.h
src/layer-setting/: CMakeLists.txt  setting.cpp  setting.h  setting.ui  setting_global.h
src/layer-stg/: CMakeLists.txt  stglayer.cpp  stglayer.h  stglayer.ui  stglayer_global.h
src/layer-title/: CMakeLists.txt  giflabel.hpp  title.cpp  title.h  title.ui
src/layer_title/: CMakeLists.txt  giflabel.hpp  title.cpp  title.h  title_global.h
